[gd_scene load_steps=8 format=3 uid="uid://cumsdlh6evfco"]

[ext_resource type="Script" path="res://scenes/start_menu.gd" id="1_q74et"]
[ext_resource type="Texture2D" uid="uid://dhw22wqopsmo7" path="res://textures/start.jpg" id="2_rtcwe"]
[ext_resource type="FontFile" uid="uid://cgmq25iexgtu2" path="res://textures/HelpMe.ttf" id="3_5i72d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y1uqd"]
texture = ExtResource("2_rtcwe")
modulate_color = Color(0.779291, 0.779291, 0.779291, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b43pv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l65gp"]
bg_color = Color(0.239216, 0, 0, 0.286275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxccg"]
bg_color = Color(0, 0, 0, 0.615686)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q74et")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y1uqd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = 752.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_b43pv")
theme_override_styles/hover = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxccg")
text = "Start Game"

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_b43pv")
theme_override_styles/hover = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxccg")
text = "Controls"

[node name="About" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_b43pv")
theme_override_styles/hover = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxccg")
text = "About"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_b43pv")
theme_override_styles/hover = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l65gp")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxccg")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -332.0
offset_right = 184.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.717647)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_5i72d")
theme_override_font_sizes/font_size = 200
text = "Escape"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
